--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -253,15 +253,16 @@ table {
   table-layout: fixed;
   margin: 45px 0;
   thead {
-    background: #f2f2f2;
+    background: #ec0e69;
   }
   th {
     text-align: left;
     padding: 8px 10px;
-    border-bottom: 15px solid #fff;
+    border: 1px solid #ec0e69;
   }
   td {
-    padding: 4px 0;
+    padding: 0.5rem;
+	border: 1px solid #b3b3b3;
   }
 }
 iframe {
