--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -252,6 +252,7 @@ table {
   width: 100%;
   table-layout: fixed;
   margin: 45px 0;
+  border-collapse:collapse;
   thead {
     background: #ec0e69;
   }
