--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -38,7 +38,7 @@ img {
 a {
   color: inherit;
   text-decoration: none;
-  border-bottom: 1px solid #555;
+  border-bottom: 1px dashed #f9144d;
   &.image {
     display: block;
     text-align: center;
