--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -36,7 +36,7 @@ img {
   max-width: 100%;
 }
 a {
-  color: inherit;
+  color: #279c13;
   text-decoration: none;
   border-bottom: 1px dashed #f9144d;
   &.image {
