--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,12 +25,16 @@ h3{
 	-webkit-font-smoothing: initial;
 }
 
-h2,
+h2{
+  color:#20515b;
+  margin: 45px 0 25px;
+}
+
 h3,
 h4,
 h5 {
   color:#20515b;
-  margin: 45px 0 25px;
+  margin: 25px 0 25px;
 }
 img {
   max-width: 100%;
