--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,4 +28,7 @@ layout: compress
 
 	</body>
 
+	<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	</script>
 </html>
