--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -258,12 +258,12 @@ table {
   margin: 45px 0;
   border-collapse:collapse;
   thead {
-    background: #ec0e69;
+    background: #ec950e;
   }
   th {
     text-align: left;
     padding: 8px 10px;
-    border: 1px solid #ec0e69;
+    border: 1px solid #b3b3b3;
   }
   td {
     padding: 0.5rem;
