add staticman option

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,19 @@ layout: default
 
 </article>
 
+<form method="POST" action="https://api.staticman.net/v1/entry/JesseEisen/DailyKeep/gh-pages">
+	  <!-- e.g. "2016-01-02-this-is-a-post" -->
+	<input name="options[slug]" type="hidden" value="{{ page.slug }}">
+
+	<input name="fields[name]" type="text">
+	<input name="fields[email]" type="email">
+	<textarea name="fields[comment]"></textarea>
+
+	<button type="submit">Comment It!</button>
+</form>
+
 <div class="back">
 	<a href="{{site.baseurl}}/">Back</a>
 </div>
+
+
