--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,18 @@ layout: default
 
 </article>
 
+<form method="POST" action="https://api.staticman.net/v1/entry/eduardoboucas/staticman/gh-pages">
+	  <!-- e.g. "2016-01-02-this-is-a-post" -->
+	    <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+
+		  <input name="fields[name]" type="text">
+		    <input name="fields[email]" type="email">
+			  <textarea name="fields[message]"></textarea>
+
+			    <button type="submit">Go!</button>
+</form>
+
+
 <div class="back">
 	<a href="{{site.baseurl}}/">Back</a>
 </div>
