--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -242,8 +242,8 @@ pre {
   line-height: 1.4;
   white-space: pre;
   overflow-x: auto;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
+  background-color: #eae6e6;
+  border: 1px dashed #333;
   padding: 1rem;
   code {
     font-size: 100%;
