--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,10 +32,17 @@ h2{
 
 h3,
 h4,
-h5 {
+{
   color:#20515b;
   margin: 25px 0 25px;
 }
+
+h5{
+  color: #006064;
+  cursor: pointer;
+  margin: 10px;
+}
+
 img {
   max-width: 100%;
 }
