--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,9 @@ layout: compress
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 
 $(document).ready(function () {
-	$("h5").nextUntil("h5").fadeToggle();
+	$("h5"). click(function() {
+		$(this).nextUntil("h5").fadeToggle()
+	});
 });
 	</script>
 </html>
